force-app/main/default/objects/phsSharedGoalsStrategies__c/phsSharedGoalsStrategies__c.object-meta.xml
<CustomObject>
    <label>phsSharedGoalsStrategies</label>
    <nameField>
        <label>phsUserGoalsStrategies Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>phsSharedGoalsStrategies</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>