force-app/main/default/objects/phsSharedGoalsStrategies__c/fields/phsSharedGoals__c.field-meta.xml
<CustomField>
    <fullName>phsSharedGoals__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>phsSharedGoals</label>
    <referenceTo>phsSharedGoals__c</referenceTo>
    <relationshipLabel>phsSharedGoalsStrategies</relationshipLabel>
    <relationshipName>phsSharedGoalsStrategies</relationshipName>
    <type>Lookup</type>
</CustomField>