force-app/main/default/objects/phsSharedGoalsStrategies__c/fields/StrategyName__c.field-meta.xml
<CustomField>
    <fullName>StrategyName__c</fullName>
    <label>StrategyName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>